Fix threading and classloading model of actions
In recent platforms, encountered when testing with 2025.3, threading and
classloading rules are tightened. This fixes the issues caused by that.